client/views/navigation/navbar/_navbar.scss
.navbar {
  @extend .navbar-default;
  @extend .navbar-fixed-top;
  border: 0px;
}

.navbar-container {
  @extend .container-fluid;
  max-width: 1600px;
}

.navbar-brand {
  position: relative;
}

.navbar-brand > img {
  bottom: 5px;
  display: inline-block;
  height: 200%;
  position: relative;
}

.site-name {
  font-size: x-large;
  vertical-align: top;
}

.site-stage {
  @include rotate(345deg);
  bottom: 2px;
  color: $site-stage-color;
  font-size: small;
  font-weight: bold;
  position: absolute;
  left: 105px;
}

.navbar-brand:hover > .site-stage {
  color: $default-white;
}

.navbar-link {
  @include transition(background-color $default-transition-time);
  font-size: $navbar-default-font-size;
  & > .caret {
    @include scale(-1.5, -1.5);
    @include transition(color $default-transition-time);
    bottom: 1px;
    color: $brand-primary;
    left: 46%;
    position: absolute;
    @media (max-width: $screen-sm) {
      display: none;
    }
  }
}

.nav > .open {
  .caret {
    @include opacity(1);
    color: $dropdown-bg;
    z-index: 1099;
  }
  & > .dropdown-menu {
    border-top: 0px;
  }
}

.navbar-link-active .caret {
  color: $navbar-default-link-color;
}

.navbar-nav > li > a.navbar-link-covering:focus {
  background: $navbar-link-covering-bg;
  & > .caret {
    color: transparent;
  }
}

.navbar-nav > .calendar-link > .navbar-link-active > .caret {
  color: $calendar-navigation-bg;
}

.navbar-nav > .calendar-link > .navbar-link-covering,
.navbar-nav > .calendar-link > .navbar-link-covering:focus {
  background-color: transparent;
  & > .caret {
    color: $calendar-navigation-bg;
  }
}

.login-link {
  height: $navbar-height;
  & > a > .caret {
    bottom: 1px;
  }
}

.nav > .login-link.open .caret {
	color: $gray-lighter;
}

.navbar-collapse {
  @media (max-width: $screen-sm) {
    box-shadow: 0 7px 7px $default-shadow;
    padding: 0px;
  }
}

.navbar-nav {
  @media (max-width: $screen-sm) {
    margin: 0px;
    & > .dropdown > a::after,
    & > .open > a::after {
      font-family: FontAwesome;
      padding-left: 5px;
    }
    & > .dropdown > a::after {
      content: "";
    }
    & > .open > a::after {
      content: "";
    }
  }
}

